# fluxcat

./: LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yaml  sphinx.yaml  test.yaml
doc/: conf.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  reference.doctree
docs/.doctrees/_autosummary/: fluxcat.catalogs.doctree
docs/_autosummary/: fluxcat.catalogs.html
docs/_modules/: index.html
docs/_modules/fluxcat/: catalogs.html  core.html
docs/_sources/: index.rst.txt  reference.rst.txt
docs/_sources/_autosummary/: fluxcat.catalogs.rst.txt
fluxcat/: __init__.py  core.py
fluxcat/catalogs/: __init__.py  hfb_target_list.json
tests/: test_fluxcatalog.py
