[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxcat"
authors = [
  {name = "The CHIME Collaboration", email = "lgray@phas.ubc.ca"}
]
description = "Astronomical source flux denisty catalogs"
requires-python = ">=3.10"
dynamic = ["readme", "version"]
license = { file = "LICENSE" }
dependencies = [
    "caput @ git+https://github.com/radiocosmology/caput.git",
    "numpy >= 1.24",
]

[project.optional-dependencies]
test = [
  "pytest >= 7.0"
]
doc = [
    "numpydoc",
    "PyYAML",
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-katex"
]

[tool.setuptools.package-data]
"fluxcat.catalogs" = ["*.json"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools-git-versioning]
enabled = true

[tool.ruff]
# Enable:
# pycodestyle ('E')
# pydocstyle ('D')
# pyflakes ('F')
# isort ('I')
# pyupgrade ('UP')
# numpy-specific ('NPY')
# ruff-specific ('RUF')
# flake8-blind-except ('BLE')
# flake8-comprehensions ('C4')
# flake8-return ('RET')
lint.select = ["E", "D", "F", "I", "UP", "NPY", "RUF", "BLE", "C4", "RET"]

# E203, W503
lint.ignore = [
    "D105", # D105: Missing docstring in magic method
    "D107", # D107: Missing docstring in init
    "D203", # D203: 1 blank line required before class docstring
    "D213", # D213: Multi-line docstring summary should start at the second line
    "D400", # D400: First line should end with a period (only ignoring this because there's another error that catches the same thing)
    "D413", # D413: Missing blank line after last section
]

# Ignore the following directories
exclude = [
    ".git",
    ".github",
    "build",
    "doc",
    "test",
]

target-version = "py310"
